# rag-over-llm

./: .env  .gitignore  app.py  pyproject.toml  requirements.txt
agenticrag/: 1-agenticrag.ipynb
data/text_files/: machine_learning.txt  python_intro.txt
data/typesense_data/: test.txt
data/vector_store/: chroma.sqlite3
faiss_store/: faiss.index  metadata.pkl
notebook/: document.ipynb  pdf_loader.ipynb  rag_evaluation.ipynb  typesense.ipynb
src/: data_loader.py  embedding.py  search.py  vectorstore.py
