[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb==0.5.23",
    "faiss-cpu>=1.14.2",
    "ipykernel>=7.2.0",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "langsmith>=0.8.9",
    "lxml>=6.1.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "tqdm>=4.68.1",
    "transformers>=4.46.3",
    "typesense>=2.0.0",
]
